--- a/contactme.html
+++ b/contactme.html
@@ -10,11 +10,11 @@
 	
 	<body>
 		<div id="header">
-	          <div id = "button1"> <a href="index.php" class="but_1"  title="">home</a></div>
-	          <div id = "button2"> <a href="aboutme.php" class="but_2" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.php"  class="but_3" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.php"  class="but_4" title="">gallery</a></div>
-	          <div id = "button5"> <a href="contactme.php" class="but_5" title="">contact me !</a></div>
+	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
+	          <div id = "button2"> <a href="aboutme.html" class="but_2" title="">about me</a></div>
+	          <div id = "button3"> <a href="resume.html"  class="but_3" title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html"  class="but_4" title="">gallery</a></div>
+	          <div id = "button5"> <a href="contactme.html" class="but_5" title="">contact me !</a></div>
 		</div>
 
 		<br>
@@ -25,6 +25,7 @@
 				<br>
 				<span class = "large_cursive_center"><div>Contact Me!</div></span>
 				<hr/>
+				<br><br>
 				<span class = "reg_small">				
 					<div id = "paragraph">
 						Email me at gz74@cornell.edu
