--- a/resume.html
+++ b/resume.html
@@ -11,10 +11,10 @@
 	<body>
 		<div id="header">
 	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
-	          <div id = "button2"> <a href="aboutme.html" class="but_2" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.html"  class="but_3" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.html"  class="but_4" title="">gallery</a></div>
-	          <div id = "button5"> <a href="contactme.html" class="but_5" title="">contact me !</a></div>
+	          <div id = "button2"> <a href="aboutme.html" title="">about me</a></div>
+	          <div id = "button3"> <a href="resume.html" title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html" title="">gallery</a></div>
+	          <div id = "button5"> <a href="contactme.html" title="">contact me !</a></div>
 		</div>
 
 		<br>
