--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
 				<hr/>
 
 				<span class = "reg_normal_left">
-					<div id = "sections">To find an internship in a Coputer Science-related field.</div>
+					<div id = "sections">To find an internship in a Computer Science-related field.</div>
 				</span>
 
 				<span class="reg_large_left">
