--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
 		<title>Alice Zhang | Home</title>
 		<link href="styles.css" rel="stylesheet" type="text/css" />
