feb 4 cleaned up code

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,44 +3,41 @@
 	<head>
 		<meta charset="UTF-8">
 		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
-		<title>Alice Zhang | Home</title>
+		<title>Alice Zhang | AboutMe</title>
 		<link href="styles.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
 	</head>
 	
 	<body>
+		<!-- menu bar begins here -->
 		<div id="header">
 	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
 	          <div id = "button2"> <a href="aboutme.html" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.html" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.html" title="">gallery</a></div>
+	          <div id = "button3"> <a href="resume.html"  title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html"  title="">gallery</a></div>
 	          <div id = "button5"> <a href="contactme.html" title="">contact me !</a></div>
 		</div>
 
 		<br>
-
+		<!-- Main box on page that uses the teaset image as its bg -->
 		<div id = "teaset">
 			<br>
+			<!-- textbox for paragraphs -->
 			<div id = "textbox">
 				<br>
-				<span class = "large_cursive_center"><div>Alice Zhang</div></span>
+				<div class = "large_cursive_center">Alice Zhang</div>
 				<hr/>
-				<span class = "reg_normal">				
-					<div id = "paragraph">
+				<div class = "reg_normal">				
 					Hello! My name is Alice and I'm a sophomore studying Computer Science at Cornell University. For most of my life I went by my legal name, Ge, but after having to correct people so many times, I decided that college was the perfect opportunity to choose a different name. New life, new people, new opportunities, right?
 					<br><br>
 					I'm 5 feet short, have a pet parrot, and love drinking tea. My Chinese name, Ge, means "song", and I actually really love music. I started my first instrument, piano, in second grade and since then, I've played the violin, flute, Chinese zither, guitar, and ukelele. Yes, I do listen to classical music (Dvorak, Mahler, Chopin!!!), but I listen to pop songs most of the time. My favorite artists change frequently, and right now I have a Sam Smith and Ed Sheeran obsession. Besides music, I also love drawing and making videos. Please check out my gallery!
 					<br><br>
 					I started my journey at Cornell thinking that I was going to be a Mechanical Engineer because I loved physics. However, I switched to computer science after really loving my Matlab programming course and realizing that what I really loved was problem solving. So now I'm in my third semester of computer science. My favorite computer science classes thus far have been Algorithms and Networks. I loved learning about how individual actions affect group decisions in Networks, and I love the "Ah-ha!" moment when you finally understand why a seemingly convoluted algorithm works. 
-					</div>
-				</span>
+				</div>
 				<br>
 				<br>
 			</div>
     	</div>
-
-    	<div id = "footer"> </div>
-
 	</body>
 </html>
