--- a/contactme.html
+++ b/contactme.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Alice Zhang | ContactMe</title>
+		<meta charset="UTF-8">
 		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
-		<title>Alice Zhang | Home</title>
 		<link href="styles.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
@@ -12,8 +13,8 @@
 		<div id="header">
 	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
 	          <div id = "button2"> <a href="aboutme.html" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.html" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.html" title="">gallery</a></div>
+	          <div id = "button3"> <a href="resume.html"  title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html"  title="">gallery</a></div>
 	          <div id = "button5"> <a href="contactme.html" title="">contact me !</a></div>
 		</div>
 
@@ -23,20 +24,13 @@
 			<br>
 			<div id = "textbox">
 				<br>
-				<span class = "large_cursive_center"><div>Contact Me!</div></span>
+				<div class = "large_cursive_center">Contact Me!</div>
 				<hr/>
+				<div class = "reg_normal_center">				
+					Email me at gz74@cornell.edu 		
+				</div>
 				<br><br>
-				<span class = "reg_small">				
-					<div id = "paragraph">
-						Email me at gz74@cornell.edu
-					</div>
-				</span>
-				<br>
-				<br>
 			</div>
     	</div>
-
-    	<div id = "footer"> </div>
-
 	</body>
 </html>
