--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Alice Zhang | Gallerye</title>
 		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
-		<title>Alice Zhang | Home</title>
+		<meta charset="UTF-8">
 		<link href="styles.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
@@ -12,8 +13,8 @@
 		<div id="header">
 	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
 	          <div id = "button2"> <a href="aboutme.html" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.html" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.html" title="">gallery</a></div>
+	          <div id = "button3"> <a href="resume.html"  title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html"  title="">gallery</a></div>
 	          <div id = "button5"> <a href="contactme.html" title="">contact me !</a></div>
 		</div>
 
@@ -21,25 +22,24 @@
 
 		<div id = "teaset">
 			<br>
-			<span class = "large_cursive_center"><div id = "textbox"> Gallery </div> </span>
+			<div id = "textbox"><div class = "large_cursive_center"> Gallery</div></div> 
+			<!--gallery_textbox is a smaller box with 100% opacity -->
 			<div id = "gallery_textbox">
 				<br>
-
-				<span class = "reg_small">				
-					<div id = "images">
-						<img src = images/gal_5.jpg>
+				<div id = "images">
+						<img src = images/gal_5.jpg alt = img1>
 						<br><br>
-						<img src = images/gal_3.jpg>
+						<img src = images/gal_3.jpg alt = img2>
 						<br><br>
-						<img src = images/gal_4.jpg>
+						<img src = images/gal_4.jpg alt = img3>
 						<br><br>
-						<img src = images/gal_6.png>
+						<img src = images/gal_6.png alt = img4>
 						<br><br>
-						<img src = images/gal_1.gif>
+						<img src = images/gal_1.gif alt = img5>
 						<br><br>
-						<img src = images/gal_7.jpg>
+						<img src = images/gal_7.jpg alt = img6>
 						<br><br>
-						<img src = images/gal_8.jpg>
+						<img src = images/gal_8.jpg alt = img7>
 						<br><br>
 						<div><iframe width = 100% height=auto src="https://www.youtube.com/embed/jl2yVepJyo4" frameborder="0" allowfullscreen></iframe></div>
 						<br><br>
@@ -48,13 +48,7 @@
 						<img src = images/gal_9.png>
 						<br><br>
 					</div>
-				</span>
-				<br>
-				<br>
-			</div>
+    		</div>
     	</div>
-
-    	<div id = "footer"> </div>
-
 	</body>
 </html>
