--- a/resume.html
+++ b/resume.html
@@ -1,48 +1,45 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
-		<title>Alice Zhang | Home</title>
+		<title>Alice Zhang | Resume</title>
 		<link href="styles.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 	
 	<body>
+		<!-- menu bar begins here -->
 		<div id="header">
 	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
 	          <div id = "button2"> <a href="aboutme.html" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.html" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.html" title="">gallery</a></div>
+	          <div id = "button3"> <a href="resume.html"  title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html"  title="">gallery</a></div>
 	          <div id = "button5"> <a href="contactme.html" title="">contact me !</a></div>
 		</div>
 
 		<br>
-
+		<!-- Main box on page that uses the teaset image as its bg -->
 		<div id = "teaset">
 			<br>
+			<!-- Textbox that contains all the writing -->
 			<div id = "textbox">
-					
 				<br>
+				<div class="large_cursive_center">Resume<hr></div>
 
-				<span class="large_cursive_center"> 
-					<div>Resume</div>
-				</span>
+				<!-- Objective -->
+				<div class="reg_large_left"><br><b>Objective</b><hr/></div>
 
-				<span class="reg_large_left">
-					<div> Objective</div>
-				</span>
 
-				<hr/>
 
-				<span class = "reg_normal_left">
-					<div id = "sections">To find an internship in a Computer Science-related field.</div>
-				</span>
+				<div class = "reg_normal_left">
+					<div id = "sections">To find an internship in a Computer Science-related field.<br><br>
+					</div>
+				</div>
 
-				<span class="reg_large_left">
-					<div> <br>Education</div>
-					<hr/>
-				</span>
+				<!-- Education -->
+				<div class="reg_large_left"><br>Education<hr/></div>
 
 				<div id="sections">
 					<div id="one">
@@ -56,7 +53,7 @@
 						<b>Ithaca NY</b>
 						<br>B.S. in Computer Science
 						<br>Dean's list all semesters
-						<br><b>Ellicott City, MD
+						<br><b>Ellicott City, MD</b>
 					</div>
 					<div id = "three">
 						<b>2013-Expected Graduation: 2017</b>
@@ -66,10 +63,8 @@
 					</div>
 				</div>
 
-				<span class="reg_large_left">
-					<div> <br>Relevant Coursework</div>
-					<hr/>
-				</span>
+				<!-- Relevant Coursework -->
+				<div class="reg_large_left"><br>Relevant Coursework<hr/></div>
 
 				<div id="sections_2">
 					<div id="a">
@@ -86,10 +81,9 @@
 					</div>
 				</div>
 
-				<span class="reg_large_left">
-					<div> <br>Experience</div>
-					<hr/>
-				</span>
+				<!-- Experience -->
+				<div class="reg_large_left"><br>Experience<hr/></div>
+
 
 				<div id="sections">
 					<div id="one">
@@ -149,10 +143,8 @@
 					<br>Organized and conducted rehearsals for 70 young musicians.
 				</div>
 
-				<span class="reg_large_left">
-					<div> <br>Activities</div>
-					<hr/>
-				</span>
+				<!-- Skills -->
+				<div class="reg_large_left"><br>Skills<hr/></div>
 
 				<div id="sections">
 					<div><b>Programming Languages</b></div>
@@ -169,10 +161,9 @@
 					<div>Fluent in Mandarin Chinese </div>
 				</div>	
 
-				<span class="reg_large_left">
-					<div> <br>Skills</div>
-					<hr/>
-				</span>
+				<!-- Activities -->
+				<div class="reg_large_left"><br>Activities<hr/></div>
+
 
 				<div id="sections">
 					<div id="one"><b>ACSU</b></div>
@@ -224,19 +215,7 @@
 						Glaciers, Write-it Do-it, Circuits</div>
 					<div id = "three"><b>2012-2013</b></div>
 				</div>
-
-
-
-
-
-
-
-
-
 			</div>
     	</div>
-
-    	<div id = "footer"> </div>
-
 	</body>
 </html>
