--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
 		<title>Alice Zhang | Home</title>
+		<!-- Google fonts used -->
+		<link href='http://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
 		<link href="styles.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
@@ -10,27 +11,29 @@
 	</head>
 	
 	<body>
+		<!-- menu bar begins here -->
 		<div id="header">
 	          <div id = "button1"> <a href="index.html" class="but_1"  title="">home</a></div>
 	          <div id = "button2"> <a href="aboutme.html" title="">about me</a></div>
-	          <div id = "button3"> <a href="resume.html" title="">resume</a></div>
-	          <div id = "button4"> <a href="gallery.html" title="">gallery</a></div>
+	          <div id = "button3"> <a href="resume.html"  title="">resume</a></div>
+	          <div id = "button4"> <a href="gallery.html"  title="">gallery</a></div>
 	          <div id = "button5"> <a href="contactme.html" title="">contact me !</a></div>
 		</div>
 
 		<br>
-
+		<!-- Main box on page that contains image-->
 		<div id = "alice">
 			<br>
+
+			<!-- textbox: contains quote-->
 			<div id = "textbox">
 				<br>
-				<span class = "reg_cursive_center"> 
-					<div>" Who in the world am I? Ah, that's the great puzzle" <br> </div>
-				</span>
+				<div class = "reg_cursive_center"> 
+					" Who in the world am I? Ah, that's the great puzzle" <br> 
+				</div>
 				
-				<span class = "reg_normal_center"><div> -Lewis Carroll, Alice in Wonderland </div></span>
+				<div class = "reg_normal_center">-Lewis Carroll, Alice in Wonderland</div>
 			</div>
     	</div>
-
 	</body>
 </html>
